extract photo controller and service, refactor methods
